--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
 body {
     background-color: #63a6e8;
+    font-family: Helvetica, sans-serif;
 }
 h1 {
     color: white;
+}
+h2 {
+    font-style: italic;
+    color:#dedede;
 }
